<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="162dp"
        android:layout_height="164dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/weather_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textViewWeatherStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherIcon" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="75sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeatherStat" />

    <TextView
        android:id="@+id/textViewMinTemperatureHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/min_temperature_holder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/textViewTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeatherStat" />

    <TextView
        android:id="@+id/textViewMinTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/textViewMinTemperatureHolder"
        app:layout_constraintTop_toTopOf="@+id/textViewMinTemperatureHolder" />

    <TextView
        android:id="@+id/textViewMaxTemperatureHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/max_temperature_holder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewMinTemperatureHolder"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinTemperatureHolder" />

    <TextView
        android:id="@+id/textViewMaxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewMinTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinTemperature" />

    <TextView
        android:id="@+id/textViewHumidityHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/humidity_holder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/textViewHumidityHolder"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

    <TextView
        android:id="@+id/textViewWindSpeedHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/wind_speed_holder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewHumidityHolder"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumidityHolder" />

    <TextView
        android:id="@+id/textViewWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumidity" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toEndOf="@+id/textViewWindSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeatherStat"
        app:srcCompat="@android:drawable/stat_notify_sync" />

</androidx.constraintlayout.widget.ConstraintLayout>